fixed header shadow with z-index

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ a:visited {
     padding: 20px;
     box-sizing: border-box;
     grid-row: 1 / 3;
+    z-index: 3;
 }
 
 #companyName {
@@ -118,10 +119,11 @@ a:visited {
 .header {
     padding: 20px 40px;
     background-color: white;
-    box-shadow: 4px 1px 5px;
+    box-shadow: 1px 1px 5px gray;
     display: grid;
     grid-template-rows: 2fr 3fr;
     box-sizing: border-box;
+    z-index: 2;
 }
 
 .headerTop,
@@ -208,6 +210,7 @@ a:visited {
     gap: 20px;
     grid-template-columns: 3fr 250px;
     grid-template-rows: auto 1fr;
+    z-index: 1;
 }
 
 .card,
